objects/Consumable__c/Consumable__c.object-meta.xml
<CustomObject>
    <label>Consumable And Tire Alignments</label>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>Consumable Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumable And Tire Alignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>