objects/Consumable__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <label>Grand Total</label>
    <length>255</length>
    <type>Text</type>
</CustomField>