objects/Consumable__c/fields/JOB__c.field-meta.xml
<CustomField>
    <fullName>JOB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JOB</label>
    <referenceTo>JOB__c</referenceTo>
    <relationshipName>Consumables</relationshipName>
    <type>Lookup</type>
</CustomField>