objects/Consumable__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Family</field>
            <operation>equals</operation>
            <value>Service Product</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Consumable And Tire Alignments</relationshipLabel>
    <relationshipName>Consumables</relationshipName>
    <type>Lookup</type>
</CustomField>