objects/Consumable__c/fields/Service_Price__c.field-meta.xml
<CustomField>
    <fullName>Service_Price__c</fullName>
    <formula>Product__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>